--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -10,19 +10,25 @@
     <div class=" mx-auto flex items-center flex-col justify-center sm:bg-white py-20 px-12 rounded-lg sm:shadow-lg shadow-none w-full sm:w-auto sm:h-auto">
         <p class="font-bold text-4xl my-4">Sign in</p>
 
-        <form class="w-full max-w-xs" action="">
-            <!-- <p id="validEmail" class="text-red-500 text-sm"></p> -->
-            <input class="w-full p-2 mb-4 border border-bgMess rounded-lg" type="text" placeholder="Email">
-            <!-- <p id="validPassword" class="text-red-500 text-sm"></p> -->
-            <input class="w-full p-2 mb-4 border border-bgMess rounded-lg" type="text" placeholder="Password">
+        <form id="loginForm" class="w-full max-w-xs mx-12" action="">
+            <p id="validEmail" class="text-red-500 text-sm"></p>
+            <input id="email" class="w-full p-2 mb-4 border border-bgMess rounded-lg" type="text" placeholder="Email">
+            <p id="validPassword" class="text-red-500 text-sm"></p>
+            <input id="password" class="w-full p-2 mb-4 border border-bgMess rounded-lg" type="password" placeholder="Password">
+        
+            <div class="flex flex-start items-center mb-4 w-full">
+                <input type="checkbox" class="border-gray-100 rounded focus:ring-1 checked:ring-1 focus:ring-offset-0 focus:outline-0 checked:bg-bgMess" id="memberCheck1">
+                <label class="text-gray ml-1 text-sm" for="remember-check">Remember me</label>
+            </div>
+            <!-- <a class="text-bgMess mb-4 text-sm" href="#">Forgot password</a> -->
+            <div class="w-full max-w-xs flex items-center flex-col">
+                <button class="w-full p-2 mb-4 bg-bgMess text-white rounded-lg transform transition-transform duration-200 hover:scale-105">Login</button>
+                <button class="w-full p-2 mb-4 text-bgMess border border-bgMess rounded-lg transform transition-transform duration-200 hover:scale-105">Google</button>
+                <p>Have no account yet? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="/src/pages/signup.html">Create one</a></p>
+            </div>
         </form>
-        <a class="text-bgMess mb-4 text-sm" href="#">Forgot password</a>
-        <div class="w-full max-w-xs flex items-center flex-col">
-            <button class="w-full p-2 mb-4 bg-bgMess text-white rounded-lg transform transition-transform duration-200 hover:scale-105">Login</button>
-            <button class="w-full p-2 mb-4 text-bgMess border border-bgMess rounded-lg transform transition-transform duration-200 hover:scale-105">Google</button>
-            <p>Have no account yet? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="">Create one</a></p>
-        </div>
-      </div>
-      <script src="../scripts/login.js"></script>
+    </div>
+
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
