--- a/front-end/src/pages/home.html
+++ b/front-end/src/pages/home.html
@@ -206,9 +206,9 @@
         </div>
       </div>
     </div>
-    <script src="../script/handle_home.js"></script>
-    <script src="../script/API_chats_home.js"></script>
-    <script src="../script/API_room_home.js"></script>
+    <script src="../scripts/handle_home.js"></script>
+    <script src="../scripts/API_chats_home.js"></script>
+    <script src="../scripts/API_room_home.js"></script>
 
   </body>
 </html>
