--- a/front-end/src/pages/home.html
+++ b/front-end/src/pages/home.html
@@ -156,25 +156,17 @@
                 class="w-8 h-8 rounded-full"
               />
             </div>
-            <div
-              class="flex max-w-xs sm:max-w-sm lg:max-w-md bg-gray-100 rounded-lg p-3"
-            >
-              <p class="text-gray-700">Hey Bob, how's it going?</p>
+            <div class="flex max-w-xs sm:max-w-sm lg:max-w-md bg-gray-100 rounded-lg p-3" >
+              <p class="text-gray-700">receive message</p>
             </div>
           </div>
 
           <!-- Outgoing Message -->
           <div class="flex justify-end mb-4 cursor-pointer">
-            <div
-              class="flex max-w-xs sm:max-w-sm lg:max-w-md bg-indigo-500 text-white rounded-lg p-3"
-            >
-              <p>
-                Hi Truong! I'm good, just finished a great book. How about you?
-              </p>
+            <div class="flex max-w-xs sm:max-w-sm lg:max-w-md bg-indigo-500 text-white rounded-lg p-3">
+              <p>send message   </p>
             </div>
-            <div
-              class="w-9 h-9 rounded-full flex items-center justify-center ml-2"
-            >
+            <div class="w-9 h-9 rounded-full flex items-center justify-center ml-2">
               <img
                 src="https://placehold.co/200x/b7a8ff/ffffff.svg?text=ʕ•́ᴥ•̀ʔ&font=Lato"
                 alt="My Avatar"
@@ -186,29 +178,17 @@
 
         <!-- Chat Input -->
         <div class="bg-white border-t border-gray-300 p-4 w-full">
-          <div class="flex items-center gap-2">
-            <button
-              class="w-10 h-10 bg-blue-800 rounded-full text-white text-2xl font-bold flex items-center justify-center cursor-pointer"
-            >
-              +
-            </button>
-            <input
-              type="text"
-              placeholder="Type a message..."
-              class="flex-1 p-2 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500"
-            />
-            <button
-              class="bg-indigo-500 text-white px-4 py-2 rounded-md cursor-pointer"
-            >
-              Send
-            </button>
-          </div>
+          <form id="send-message" class="flex items-center gap-2">
+            <button class="w-10 h-10 bg-blue-800 rounded-full text-white text-2xl font-bold flex items-center justify-center cursor-pointer">+</button>
+            <input type="text" placeholder="Type a message..." class="flex-1 p-2 rounded-md border border-gray-300 focus:outline-none focus:border-blue-500"/>
+            <button class="bg-indigo-500 text-white px-4 py-2 rounded-md cursor-pointer" >Send</button>
+          </form>
         </div>
       </div>
     </div>
     <script src="../scripts/handle_home.js"></script>
     <script src="../scripts/API_chats_home.js"></script>
     <script src="../scripts/API_room_home.js"></script>
-
+    <script src="../scripts/API_chats_sidebar.js"></script>
   </body>
 </html>
