--- a/front-end/src/pages/login.html
+++ b/front-end/src/pages/login.html
@@ -24,7 +24,7 @@
             <div class="w-full max-w-xs flex items-center flex-col">
                 <button class="w-full p-2 mb-4 bg-bgMess text-white rounded-lg transform transition-transform duration-200 hover:scale-105">Login</button>
                 <button class="w-full p-2 mb-4 text-bgMess border border-bgMess rounded-lg transform transition-transform duration-200 hover:scale-105">Google</button>
-                <p>Have no account yet? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="/src/pages/signup.html">Create one</a></p>
+                <p>Have no account yet? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="./signup.html">Create one</a></p>
             </div>
         </form>
     </div>
