--- a/front-end/src/pages/signup.html
+++ b/front-end/src/pages/signup.html
@@ -25,7 +25,7 @@
             
             <button id="signup" type="submit" class="w-full p-2 mb-4 bg-bgMess text-white rounded-lg transform transition-transform duration-200 hover:scale-105">Sign up</button>
         </form>
-        <p>Already have an account? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="/src/pages/login.html">Login</a></p>
+        <p>Already have an account? <a class="text-bgMess hover:text-[#4b4ee9] hover:font-bold" href="./login.html">Login</a></p>
     </div>
     <script src="../scripts/signup.js"></script>
 </body>
